# labwc-menu-generator

./: .gitignore  Makefile  NEWS.md  README.md  desktop.c  desktop.h  ignore.c  ignore.h  main.c  meson.build  schema.h
.github/workflows/: build.yml
contrib/: example-dynamic-root-menu.sh  update-menu.sh
data/: labwc-menu-generator.1.scd  meson.build
t/: meson.build  t1000.t  t1000.t.c  t1001.t  t1001.t.c  test-lib.c  test-lib.h
t/t1000/: menu.xml
t/t1000/applications/: Alacritty.desktop  audacious.desktop  avahi-discover.desktop  bssh.desktop  bvnc.desktop  compton.desktop  gcr-prompter.desktop  gcr-viewer.desktop  geany.desktop  gimp.desktop  gnumeric.desktop  gpicview.desktop  io.github.Hexchat.desktop  leafpad.desktop  mate-about.desktop  mate-color-select.desktop  mate-panel.desktop  mimeinfo.cache  mpv.desktop  mtpaint.desktop  nautilus-autorun-software.desktop  netsurf.desktop  network.cycles.wdisplays.desktop  nitrogen.desktop  org.flameshot.Flameshot.desktop  org.gnome.Evince-previewer.desktop  org.gnome.Evince.desktop  org.inkscape.Inkscape.desktop  org.xfce.mousepad-settings.desktop  org.xfce.mousepad.desktop  pcmanfm-desktop-pref.desktop  picom.desktop  qterminal-drop.desktop  qterminal.desktop  sakura.desktop  vim.desktop  vivaldi-stable.desktop  vlc.desktop
t/t1001/: menu-sv.xml
